master-node/nginxsvc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30000
  selector:
    app: nginx
