master-node/apache2ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress
 annotations:
   apache.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: apache
 rules:
  - http:
     paths:
     - path: /apache
       pathType: Prefix
       backend:
         service:
           name: apache
           port:
             number: 80
